S13nSW: Set client id for shared workers

Store client_id supplied via ServiceWorkerContainer::SetController()
in ServiceWorkerProviderContext::ProviderStateForClient so that
we can pass the client_id to WorkerFetchContextImpl. This enables
us to set FetchEvent#clientId accordingly in shared workers.

Bug: 840668
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: Ie03290b9d70c3fd0d2a74e83d7881057ec3e1b51
Reviewed-on: https://chromium-review.googlesource.com/1049210
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557802}
Former-commit-id: 4c1ce9e5c598b40eb456693eefc74432e5ace5b8